# Decolorizer

./: CMakeLists.txt  Decolor.cpp  Decolor.hpp  README.md  dialog.cpp  dialog.h  dialog.ui  main.cpp
